--- a/good-paws-api/package.json
+++ b/good-paws-api/package.json
@@ -53,7 +53,10 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.6",
+    "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/repl": "^3.1.11",
+    "luxon": "^3.0.1",
+    "pg": "^8.7.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
