--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
+
+
