--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.21.0",
@@ -27,5 +28,3 @@
     "styled-components": "^5"
   }
 }
-
-
