--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.10.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.0.1",
+    "leaflet": "^1.8.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.1",
     "styled-components": "^5.3.5",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
