feat: Crud Animals, Crud Races, Crud Sexes, Types, Crud Users

--- a/good-paws-api/package.json
+++ b/good-paws-api/package.json
@@ -19,7 +19,10 @@
     ],
     "rules": {
       "prettier/prettier": [
-        "error"
+        "error",
+        {
+          "endOfLine": "auto"
+        }
       ]
     }
   },
