--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -19,9 +19,11 @@
     "leaflet": "^1.8.0",
     "next": "12.2.4",
     "react": "18.2.0",
+    "react-chakra-slide-show": "^1.0.11",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
+    "react-multi-carousel": "^2.8.2",
     "styled-components": "^5.3.5",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
