feat: add authentication config

--- a/good-paws-api/.adonisrc.json
+++ b/good-paws-api/.adonisrc.json
@@ -21,7 +21,8 @@
     "./providers/AppProvider",
     "@adonisjs/core",
     "@adonisjs/lucid",
-    "@adonisjs/attachment-lite"
+    "@adonisjs/attachment-lite",
+    "@adonisjs/auth"
   ],
   "aceProviders": [
     "@adonisjs/repl"
