--- a/good-paws-api/tsconfig.json
+++ b/good-paws-api/tsconfig.json
@@ -30,7 +30,8 @@
       "@adonisjs/repl",
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
-      "@adonisjs/attachment-lite"
+      "@adonisjs/attachment-lite",
+      "@adonisjs/auth"
     ]
   }
 }
