feat: shelter list page

--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -18,9 +18,9 @@
     "framer-motion": "^7.0.1",
     "leaflet": "^1.8.0",
     "next": "12.2.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chakra-slide-show": "^1.0.11",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
     "react-multi-carousel": "^2.8.2",
