feat: add mail drive config and env variables

--- a/good-paws-api/.env.example
+++ b/good-paws-api/.env.example
@@ -9,3 +9,6 @@ PG_PORT=5432
 PG_USER=lucid
 PG_PASSWORD=
 PG_DB_NAME=lucid
+RESET_WEB=<web-for-reset-email>
+FROM_EMAIL=<email>
+SPARKPOST_API_KEY=<sparkpost-api-key>
