--- a/good-paws-admin/package.json
+++ b/good-paws-admin/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "cors": "^2.8.5",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "react-query": "^3.39.2"
   }
 }
