--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "chakra-react-select": "^4.1.4",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.0.1",
     "leaflet": "^1.8.0",
