Navbar layout when user is logged in.

--- a/good-paws-web/package.json
+++ b/good-paws-web/package.json
@@ -14,11 +14,13 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/inter": "^4.5.12",
+    "@reduxjs/toolkit": "^1.8.5",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.0.1",
     "leaflet": "^1.8.0",
     "next": "12.2.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
     "react-chakra-slide-show": "^1.0.11",
     "react-dom": "^18.2.0",
@@ -26,8 +28,12 @@
     "react-leaflet": "^4.0.1",
     "react-multi-carousel": "^2.8.2",
     "react-navigator-geolocation": "^1.0.8",
+    "react-redux": "^8.0.2",
     "react-spinners": "^0.13.4",
     "react-use-pagination": "^2.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
