--- a/good-paws-admin/package.json
+++ b/good-paws-admin/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
