--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "url-parse": "^1.5.10"
   }
 }
